# mt-rotator

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  README_EN.md  compose.prod.yaml  compose.yaml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_unique_user_display_name_ci.py
backend/apps/backtests/: admin.py  apps.py  engine.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/backtests/migrations/: 0001_initial.py  0002_backtestrun_lease.py
backend/apps/core/: admin.py  admin_mixins.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/market/: admin.py  calendar.py  models.py  providers.py  serializers.py  services.py  settlement.py  tasks.py  urls.py  views.py
backend/apps/paper/: admin.py  advice.py  apps.py  models.py  policy.py  ranking.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/paper/migrations/: 0001_initial.py  (+3 more)
backend/apps/strategies/: admin.py  engine.py  execution.py  models.py  serializers.py  services.py  urls.py  views.py
backend/mt_rotator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  factories.py  test_accounts.py  test_api.py  test_api_workflows.py  test_backtest.py  test_execution.py  test_manual_trading.py  test_market.py  test_models.py  test_paper.py  test_performance.py  test_provider_contract.py  test_recovery.py  test_snapshot.py  test_strategies.py
(+58 files in other folders)
