[project]
name = "mt-rotator-backend"
version = "0.1.0"
description = "MT Rotator API, research engine, and paper-trading worker"
requires-python = ">=3.12,<3.13"
dependencies = [
    "akshare>=1.17.0,<2",
    "argon2-cffi>=23.1,<26",
    "celery[redis]>=5.5,<6",
    "dj-database-url>=2.3,<4",
    "django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "exchange-calendars>=4.11,<5",
    "gunicorn>=23,<24",
    "numpy>=2.2,<3",
    "pandas>=2.2,<3",
    "psycopg[binary]>=3.2,<4",
    "python-dateutil>=2.9,<3",
    "whitenoise>=6.9,<7",
]

[dependency-groups]
dev = [
    "django-migration-linter>=5,<6",
    "django-stubs>=5.2,<6",
    "mypy>=1.16,<1.19",
    "pip-audit>=2.9,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.2,<7",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<0.13",
    "types-python-dateutil>=2.9,<3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mt_rotator.settings"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings -m 'not live'"
markers = ["live: calls external free market-data providers"]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/admin.py",
    "*/apps.py",
    "*/management/*",
    "*/migrations/*",
    "*/urls.py",
]

[tool.ruff]
target-version = "py312"
line-length = 110
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "DJ"]
ignore = ["DJ001", "DJ008", "DJ012", "E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "mt_rotator.settings"
